<resources>
    <string name="app_name">github</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="authorize">进入授权</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_passowrd">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_loading">登录中...</string>
    <string name="auto_login">自动登录</string>
    <string name="activity_title_oauth_page">授权页</string>



    <!--个人信息栏文案-->
    <string name="format_email">邮箱：%s</string>
    <string name="format_username">用户名：%s</string>
    <string name="my_emoji">我的心情</string>
    <string name="set_status">去设置心情</string>
    <string name="like_star">喜欢</string>
    <string name="fans">粉丝</string>
    <string name="concern">关注</string>

    <string name="my_activity">动态</string>
    <string name="my_recommand">推荐</string>
    <string name="my_repository">仓库</string>
</resources>
