<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginUser"
            type="cn.luozhanming.fragment.UserObject" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical">

        <!--个人信息头-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:contentDescription="@string/nav_header_desc"
                app:circleCrop="@{true}"
                app:imageUrl="@{String.valueOf(loginUser.avatarUrl())}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.format(@string/format_email,loginUser.email())}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_color_1"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:text="@{String.format(@string/format_username,loginUser.login())}"
                android:textColor="@color/text_color_1"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--我的状态-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_emoji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/frame_emoji"
            android:visibility="@{loginUser.status()==null?View.GONE:View.VISIBLE}">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/my_emoji"
                android:textColor="#38F1DC"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxWidth="180dp"
                android:maxLines="2"
                android:text="@{loginUser.status().message()}"
                android:textColor="@color/normal_text_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="12dp"
                android:layout_height="24dp"
                android:layout_marginRight="@dimen/margin_horizontal"
                android:src="@mipmap/ic_go"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="@{loginUser.status()==null?View.VISIBLE:View.GONE}"
            android:background="@drawable/frame_no_status"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@mipmap/ic_emoji"
                android:drawablePadding="24dp"
                android:gravity="center"
                android:text="@string/set_status"
                android:textColor="#1E1E1E"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@{String.valueOf(loginUser.starredRepositories().totalCount())}"
                    android:textColor="#1E1E1E"
                    android:textSize="12sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/like_star"
                    android:textColor="#1E1E1E"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:background="@color/divider_color"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"

                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@{String.valueOf(loginUser.followers().totalCount())}"
                    android:textColor="#1E1E1E"
                    android:textSize="12sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/fans"
                    android:textColor="#1E1E1E"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:background="@color/divider_color"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:text="@{String.valueOf(loginUser.following().totalCount())}"
                    android:textColor="#1E1E1E"
                    android:textSize="12sp"
                    android:layout_marginBottom="5dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/concern"
                    android:textColor="#1E1E1E"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color"/>




    </LinearLayout>
</layout>