<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="cn.luozhanming.github.viewmodel.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <com.airbnb.lottie.LottieAnimationView
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.83"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_login" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_vertical"
                        android:src="@mipmap/ic_github_logo" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_vertical"
                        android:layout_marginLeft="@dimen/margin_horizontal"
                        android:layout_marginRight="@dimen/margin_horizontal"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_username" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/hint_username"
                                android:text="@={viewmodel.username}"
                                android:textSize="18dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_horizontal"
                        android:layout_marginTop="@dimen/margin_vertical"
                        android:layout_marginRight="@dimen/margin_horizontal"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_keyboard" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/hint_passowrd"
                                android:text="@={viewmodel.password}"
                                android:textSize="18dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginLeft="@dimen/margin_horizontal"
                        android:layout_marginTop="56dp"
                        android:layout_marginRight="@dimen/margin_horizontal"
                        android:layout_marginBottom="@dimen/margin_vertical"
                        android:background="@drawable/bg_github_confirm_button"
                        android:text="@string/authorize"

                        android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>